2009-04-13  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        * platform/cf/BinaryPropertyList.cpp: Added comment.
        * platform/cf/BinaryPropertyList.h: Fixed mistakes in comments.

2009-04-13  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Bug 25158: hit testing doesn't work right in some cases involving anonymous blocks
        https://bugs.webkit.org/show_bug.cgi?id=25158
        rdar://problem/6769693

        Test: editing/selection/click-after-nested-block.html

        * rendering/RenderBlock.cpp:
        (WebCore::isChildHitTestCandidate): Added. Helper so the two loops in positionForPoint
        can share code.
        (WebCore::RenderBlock::positionForPoint): Removed unneeded special case for first
        child box. Changed special case for last child box to propertly handle the various
        types of child box that are not hit test candidates (the same ones already handled
        by the hit test loop below), adding in a loop so we find the last candidate.

2009-04-13  David Hyatt  <hyatt@apple.com>

        Reviewed by Sam Weinig.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=25125.  Rework scrolling so that a layout happens first when
        it's already needed so that the code doesn't end up making bad decisions based off invalid document sizes.

        * WebCore.base.exp:
        * page/FrameView.h:
        (WebCore::FrameView::visibleContentsResized):
        * platform/ScrollView.cpp:
        (WebCore::ScrollView::ScrollView):
        (WebCore::ScrollView::updateScrollbars):
        * platform/ScrollView.h:

2009-04-13  Adam Roben  <aroben@apple.com>

        Add SharedBuffer::wrapCFData

        This is the CF-equivalent of wrapNSData.

        Reviewed by Brady Eidson.

        * platform/SharedBuffer.h:
        * platform/cf/SharedBufferCF.cpp:
        (WebCore::SharedBuffer::wrapCFData):

2009-04-13  Dan Bernstein  <mitz@apple.com>

        - build fix
